--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
   onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 12px 24px rgba(93, 95, 239, 0.6)';"
   onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 8px 20px rgba(93, 95, 239, 0.4)';"
 >
-  <img src="./images/logo.png" alt="Icon" style="width: 30px; height: 30px;">
+  <<i class="fas fa-wallet" style="width: 30px; height: 30px;"></i>
 Connect Wallet
 </button>
 
