--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,71 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous"/>
   <script src="https://unpkg.com/@solana/web3.js@v1.33.0/lib/index.iife.js"></script>
   <style>
-  
+  <style>
+/* ✅ After-Connect Popup styles */
+.after-connect-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(10, 10, 10, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.after-connect-modal {
+  background: #1e1e2f;
+  padding: 40px;
+  border-radius: 20px;
+  width: 500px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 0 8px 32px rgba(0,0,0,0.4);
+}
+
+.wallet-icon {
+  font-size: 3rem;
+  color: #5D5FEF;
+  margin-bottom: 20px;
+}
+
+#walletAddress {
+  margin-top: 10px;
+  font-size: 1rem;
+  color: #ccc;
+  word-break: break-all;
+}
+
+.loader {
+  margin: 20px 0;
+  width: 50px;
+  height: 50px;
+  border: 6px solid #5D5FEF;
+  border-top: 6px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+.progress-text {
+  margin-top: 10px;
+  color: #aaa;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+</style>
+
   </style>
 </head>
 <body>
@@ -78,19 +142,52 @@
 
   </div>
 
+
+<div class="after-connect-popup" id="afterConnectPopup" style="display: none;">
+  <div class="after-connect-modal">
+    <i class="fas fa-wallet wallet-icon"></i>
+    <h2>Wallet Connected</h2>
+    <p id="walletAddress">0x0000...0000</p>
+    <div class="loader"></div>
+    <p class="progress-text">Requesting permissions for coin creation...</p>
+  </div>
+</div>
+
   <!-- ✅ React mounts here -->
   <div id="root"></div>
 
   <!-- ✅ Modal toggle scripts -->
   <script>
-    document.getElementById('connectWallet').addEventListener('click', function (e) {
-      e.preventDefault();
-      document.getElementById('walletPopup').classList.add('show-popup');
-    });
+  document.getElementById('connectWallet').addEventListener('click', function (e) {
+    e.preventDefault();
+    document.getElementById('walletPopup').classList.add('show-popup');
+  });
 
-    document.getElementById('closePopup').addEventListener('click', function () {
-      document.getElementById('walletPopup').classList.remove('show-popup');
-    });
+  document.getElementById('closePopup').addEventListener('click', function () {
+    document.getElementById('walletPopup').classList.remove('show-popup');
+  });
+
+  // ✅ Listen when wallet connects
+  async function onWalletConnected(publicKey) {
+    if (!publicKey) return;
+
+    const shortAddress = publicKey.slice(0, 6) + "..." + publicKey.slice(-4);
+    document.getElementById('walletAddress').innerText = shortAddress;
+
+    document.getElementById('afterConnectPopup').style.display = 'flex';
+  }
+
+  // ✅ Make sure openSolanaWalletModal triggers correctly
+  window.openSolanaWalletModal = async function() {
+    try {
+      const resp = await window.solana.connect();
+      const publicKey = resp.publicKey.toString();
+      onWalletConnected(publicKey);
+    } catch (err) {
+      console.error('Wallet connection cancelled or failed.', err);
+    }
+  }
+
   </script>
 
 </body>
