--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,8 @@
 
 </div>
 </div>
-  
+  <div id="root"></div>
+
 <script>
   document.getElementById('connectWallet').addEventListener('click', function (e) {
     e.preventDefault();
